--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,6 +1,8 @@
 // User variables:
 $accent: orange
 $text: #333
+$white: #fff
+$btn-color: #250F8A
 
 // Bootstrap compatible gutter variable => $gutter
 $grid-gutter-width: 20px
