--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -18,7 +18,7 @@
 		src: url($f-url) format('woff2')
 
 
-@include font('Roboto', normal, 400, '../fonts/roboto-regular-webfont.woff2')
-@include font('Roboto', italic, 400, '../fonts/roboto-italic-webfont.woff2')
-@include font('Roboto', normal, 700, '../fonts/roboto-bold-webfont.woff2')
-@include font('Roboto', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
+@include font('Source Sans Pro', normal, 400, '../fonts/sourcesanspro.woff2')
+@include font('Source Sans Pro', semibold, 600, '../fonts/sourcesansprosemibold.woff2')
+@include font('Source Sans Pro', bold, 700, '../fonts/sourcesansprobold.woff2')
+
