--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -17,18 +17,21 @@ input, textarea
 		border-color: green
 
 body
-	font-size: 16px
+	font-size: 15px
 	min-width: 320px
 	position: relative
-	line-height: 1.65
-	font-family: 'Roboto', sans-serif
+	line-height: 24px
+	font-family: 'Source Sans Pro', sans-serif
 	overflow-x: hidden
 	color: $text
+a
+    text-decoration: none
+    color: inherit
 
 // Custom Sass / Remove before use
 
 .container
-	max-width: 700px
+	max-width: 1170px
 	padding:
 		right: $gutter/2
 		left: $gutter/2
@@ -60,3 +63,54 @@ body
 
 .parent // Lazy Load Placeholder Generator: https://webdesign-master.ru/services/lazy/
 	background-image: url(data:image/gif;base64,R0lGODlhCgAIAIABAN3d3f///yH5BAEAAAEALAAAAAAKAAgAAAINjAOnyJv2oJOrVXrzKQA7)
+.header
+    background-image: url('/img/_src/header-bg.jpg')
+    min-height: 792px
+    background-repeat: no-repeat
+    background-size: cover
+    background-position: top center
+.header__top
+    display: flex
+    justify-content: space-between
+    height: 100px
+    align-items: center
+.menu__list
+    display: -webkit-flex
+    display: -moz-flex
+    display: -ms-flex
+    display: -o-flex
+    display: flex
+    margin: 0
+    li
+        padding-left: 50px
+        list-style: none
+        margin: 0
+    a
+        font-weight: 600
+        opacity: 0.5
+        color: $white
+        text-transform: uppercase
+        transition: all 0.5s
+    a:hover
+        opacity: 1
+        text-decoration: none
+        
+.login
+    margin-right: 40px
+    font-weight: 600
+    color: $white
+    text-transform: uppercase
+.sign-up
+    color: $btn-color
+    font-weight: 600
+    text-transform: uppercase
+    background-color: $white
+    padding: 8px 43px
+    border-radius: 20px
+    
+    
+    
+    
+    
+    
+    
