Додання слайдер. Частина1

--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -2,6 +2,7 @@
 $accent: orange
 $text: #333
 $white: #fff
+$yellow: #FFCA00
 $btn-color: #250F8A
 
 // Bootstrap compatible gutter variable => $gutter
