--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -107,10 +107,41 @@ a
     background-color: $white
     padding: 8px 43px
     border-radius: 20px
-    
-    
-    
-    
-    
-    
-    
+.header-slider
+    padding-top: 111px
+.header-slider__item-content
+    display: flex
+    justify-content: space-between
+.header-slider__item-info
+    min-width: 506px
+    color: $white
+.header-slider__title
+    font-weight: 700
+    font-size: 45px
+    line-height: 60px
+    margin-bottom: 10px
+.header-slider__description
+    font-size: 24px
+    line-height: 55px
+    margin-bottom: 60px
+.header-slider__btn
+    text-transform: uppercase
+    color: $btn-color
+    font-weight: 600
+    padding: 13px 39px
+    background-color: $yellow
+    border-radius: 25px
+.header-slider__item-images
+    margin: 10px 82px 0 0
+.header-dots
+    list-style: none
+    button
+        background-color: $white
+        opacity: 0.5
+        border: none
+        font-size: 0
+        padding: 0
+        width: 7px
+        padding: 7px
+        border-radius: 3.5px;
+        cursor: pointer
