Створив секцію Переваги

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -189,3 +189,39 @@ a
     padding: 0 10px
     color: #272727
     opacity: 0.7
+    
+.advantages
+    padding-top: 64px
+    background: #F4F9FD
+    background-image: url('/img/_src/advantages-bg.svg')
+    background-repeat: no-repeat
+    background-position: center right
+.advantages-box
+    display: flex
+    justify-content: space-between
+    padding-bottom: 76px
+
+.advantages-box__info
+    max-width: 455px
+    padding-top: 60px
+    background-image: url('/img/_src/title-bg-1.svg')
+    background-repeat: no-repeat
+    background-position: 22px 76px
+.advantages-box--right .advantages-box__info
+        background-image: url('/img/_src/title-bg-2.svg')
+        background-position: 22px 130px
+.advantages-box__info--third
+    background-image: url('/img/_src/title-bg-3.svg')
+        background-position: 2px 106px
+.advantages-box__title
+    color: #202020
+    font-size: 35px
+    font-weight: 700
+    line-height: 45px
+    padding: 68px 0 15px 48px
+.advantages-box__text
+    padding-left: 48px
+    color: #272727
+.advantages-box__text p 
+    margin: 12px 0
+    
