Створив секцію Відгуки та Футер

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -224,4 +224,91 @@ a
     color: #272727
 .advantages-box__text p 
     margin: 12px 0
+.reviews
+    background-image: url('/img/_src/reviews-bg.jpg');
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+    padding: 38px 0 82px
+.reviews__title
+    color: $white
+    margin: 0 auto 48px
+    max-width: 385px
+.reviews__items
+    max-width: 940px
+    margin: 0 auto
+    display: flex
+    justify-content: space-between
+.reviews__item
+    width: 300px
+    border-radius: 5px
+    background-color: rgba(255, 255,255, 0.2)
+    padding: 35px 20px
+    color: $white
+.reviews__item--head
+    display: flex
+    margin-bottom: 13px
+.reviews__item--head img
+    border-radius: 50%
+    margin-right: 20px
+.reviews__item--name
+    font-weight: 600
+.reviews__item--position
+    opacity: .5
+.reviews__item--text
+    text-align: center
+    padding-top: 39px
+    position: relative
+.reviews__item--text
+     &::before
+        content: "“"
+        font-weight: bold
+        font-size: 40px
+        line-height: 55px
+        position: absolute
+        top: 0
+        left: 0
+        right: 0
+.footer___inner
+    display: flex
+    justify-content: space-between
+    align-items: center
+    height: 61px
+    color: #272727
+    padding: 0 40px
+.footer__link a + a
+    margin-left: 20px
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
     
